--- a/MessagingApp-SPA/angular.json
+++ b/MessagingApp-SPA/angular.json
@@ -26,7 +26,10 @@
               "src/styles.css"
               
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/alertifyjs/build/alertify.min.js"
+
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
